--- a/src/SkillSphere.UserProfileManager.API/SkillSphere.UserProfileManager.API.csproj
+++ b/src/SkillSphere.UserProfileManager.API/SkillSphere.UserProfileManager.API.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
