изменена логика навыков, теперь они общие для всех.

--- a/src/SkillSphere.UserProfileManager.UseCases/SkillSphere.UserProfileManager.UseCases.csproj
+++ b/src/SkillSphere.UserProfileManager.UseCases/SkillSphere.UserProfileManager.UseCases.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\SkillSphere.UserProfileManager.DataAccess\SkillSphere.UserProfileManager.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UserSkills\Commands\" />
+    <Folder Include="UserSkills\Queries\" />
+  </ItemGroup>
+
 </Project>
