Доработана логика конечных точек, улучшены команды и модели возвращаемых данных.

--- a/src/SkillSphere.UserProfileManager.API/appsettings.json
+++ b/src/SkillSphere.UserProfileManager.API/appsettings.json
@@ -11,5 +11,5 @@
 
   "ConsulKey": "JwtTokenSettings",
 
-  "DatabaseConnection": "Server=localhost;Port=5432;Database=db;User Id=postgres;Password=291203;"
+  "DatabaseConnection": "Server=localhost;Port=5432;Database=db;User Id=postgres;Password=291203;Include Error Detail=true"
 }
