--- a/src/SkillSphere.UserProfileManager.UseCases/SkillSphere.UserProfileManager.UseCases.csproj
+++ b/src/SkillSphere.UserProfileManager.UseCases/SkillSphere.UserProfileManager.UseCases.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="SkillSphere.Infrastructure.Security" Version="1.0.3" />
@@ -14,13 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SkillSphere.UserProfileManager.Contracts\SkillSphere.UserProfileManager.Contracts.csproj" />
     <ProjectReference Include="..\SkillSphere.UserProfileManager.Core\SkillSphere.UserProfileManager.Core.csproj" />
     <ProjectReference Include="..\SkillSphere.UserProfileManager.DataAccess\SkillSphere.UserProfileManager.DataAccess.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="UserSkills\Commands\" />
-    <Folder Include="UserSkills\Queries\" />
   </ItemGroup>
 
 </Project>
