feature: Добавлена валидация fix: Доработана конфигурация проекта

--- a/src/SkillSphere.UserProfileManager.API/appsettings.json
+++ b/src/SkillSphere.UserProfileManager.API/appsettings.json
@@ -5,11 +5,13 @@
     "Address": "http://localhost:8500",
     "ServiceName": "UserProfile Service",
     "ServiceAddress": "localhost",
-    "ServicePort": 8083,
+    "ServicePort": 8084,
     "Tags": [ "api", "profiles" ]
   },
 
   "ConsulKey": "JwtTokenSettings",
 
-  "DatabaseConnection": "Server=localhost;Port=5432;Database=db;User Id=postgres;Password=291203;Include Error Detail=true"
+  "AuthorizationService": "https://localhost:8081",
+
+  "DatabaseConnection": "Host=localhost;Port=5432;Database=db;User Id=postgres;Password=291203;"
 }
