--- a/src/SkillSphere.UserProfileManager.API/SkillSphere.UserProfileManager.API.csproj
+++ b/src/SkillSphere.UserProfileManager.API/SkillSphere.UserProfileManager.API.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Serilog" Version="4.0.1" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
@@ -21,7 +22,7 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="SkillSphere.Infrastructure.Consul" Version="1.0.0" />
-    <PackageReference Include="SkillSphere.Infrastructure.Security" Version="1.0.3" />
+    <PackageReference Include="SkillSphere.Infrastructure.Security" Version="1.0.6" />
     <PackageReference Include="SkillSphere.Infrastructure.UseCases" Version="1.0.0" />
     <PackageReference Include="SkillSphere.Infrastructure.UseCases.DI" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
