featuer: Добавлена конечная точка для проверки создания профиля. fix: исправлен метод возвращения категорий. Обновлена миграция.

--- a/src/SkillSphere.UserProfileManager.API/appsettings.json
+++ b/src/SkillSphere.UserProfileManager.API/appsettings.json
@@ -11,7 +11,7 @@
 
   "ConsulKey": "JwtTokenSettings",
 
-  "AuthorizationService": "https://localhost:8081",
+  "AuthorizationService": "http://localhost:8081",
 
   "DatabaseConnection": "Host=localhost;Port=5432;Database=db;User Id=postgres;Password=291203;"
 }
