fix: исправлена и доработана логика загрузки изображения на сервер.

--- a/src/SkillSphere.UserProfileManager.API/appsettings.json
+++ b/src/SkillSphere.UserProfileManager.API/appsettings.json
@@ -13,5 +13,7 @@
 
   "AuthorizationService": "http://localhost:8081",
 
-  "DatabaseConnection": "Host=localhost;Port=5432;Database=db;User Id=postgres;Password=291203;"
+  "DatabaseConnection": "Host=localhost;Port=5432;Database=db;User Id=postgres;Password=291203;",
+
+  "UploadsFolder": "../../uploads"
 }
